# Assignment-Sparkland

./: CMakeLists.txt  README.md
include/: csv_writer.h  ema_calculator.h  hft_processor.h  json_parser.h  logger.h  test_runner.h  ticker_data.h  websocket_client.h
src/: csv_writer.cpp  ema_calculator.cpp  hft_processor.cpp  json_parser.cpp  logger.cpp  main.cpp  test_runner.cpp  ticker_data.cpp  websocket_client.cpp
